// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select /w design 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w design 2`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Prefix-hc8ttv-3 euGNYx"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w design 3`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 lkLMMk Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w design 4`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 lkLMMk Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Prefix-hc8ttv-3 euGNYx"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w disabled 1`] = `
<Select
  design="outline"
  disabled={true}
  maxListHeight={300}
  openWhenFocus={true}
  postfix={
    Object {
      "down": <SelectOpenDown
        color="currentColor"
        size="m"
      />,
      "up": <SelectHide
        color="currentColor"
        size="m"
      />,
    }
  }
  size="l"
  tabIndex={0}
>
  <Selectstyles__Box
    aria-autocomplete="list"
    aria-disabled={true}
    aria-invalid={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex={0}
  >
    <div
      aria-autocomplete="list"
      aria-disabled={true}
      aria-invalid={false}
      className="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={0}
    >
      <Selectstyles__StyledInputWrapper
        active={false}
        design="outline"
        disabled={true}
        size="l"
        target={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": e {
              "baseHash": 259559705,
              "baseStyle": undefined,
              "componentId": "Selectstyles__Current-sc-1w9qsms-1",
              "isStatic": false,
              "rules": Array [
                "white-space:nowrap;text-overflow:ellipsis;overflow:hidden;height:100%;display:flex;align-items:center;",
                [Function],
                " ",
                ".Inputstyles__StyledInput-hc8ttv-2",
                "{padding:0;width:100%;height:auto;border-radius:0;}",
                ".Inputstyles__Placeholder-hc8ttv-0",
                "{padding:0;}",
                [Function],
              ],
              "staticRulesId": "",
            },
            "displayName": "Selectstyles__Current",
            "foldedComponentIds": Array [],
            "render": [Function],
            "shouldForwardProp": undefined,
            "styledComponentId": "Selectstyles__Current-sc-1w9qsms-1",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
      >
        <InputWrapper
          active={false}
          className="Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
          design="outline"
          disabled={true}
          size="l"
          target={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": e {
                "baseHash": 259559705,
                "baseStyle": undefined,
                "componentId": "Selectstyles__Current-sc-1w9qsms-1",
                "isStatic": false,
                "rules": Array [
                  "white-space:nowrap;text-overflow:ellipsis;overflow:hidden;height:100%;display:flex;align-items:center;",
                  [Function],
                  " ",
                  ".Inputstyles__StyledInput-hc8ttv-2",
                  "{padding:0;width:100%;height:auto;border-radius:0;}",
                  ".Inputstyles__Placeholder-hc8ttv-0",
                  "{padding:0;}",
                  [Function],
                ],
                "staticRulesId": "",
              },
              "displayName": "Selectstyles__Current",
              "foldedComponentIds": Array [],
              "render": [Function],
              "shouldForwardProp": undefined,
              "styledComponentId": "Selectstyles__Current-sc-1w9qsms-1",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
        >
          <Inputstyles__Wrapper
            active={false}
            className="Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
            design="outline"
            disabled={true}
            size="l"
            target={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": e {
                  "baseHash": 259559705,
                  "baseStyle": undefined,
                  "componentId": "Selectstyles__Current-sc-1w9qsms-1",
                  "isStatic": false,
                  "rules": Array [
                    "white-space:nowrap;text-overflow:ellipsis;overflow:hidden;height:100%;display:flex;align-items:center;",
                    [Function],
                    " ",
                    ".Inputstyles__StyledInput-hc8ttv-2",
                    "{padding:0;width:100%;height:auto;border-radius:0;}",
                    ".Inputstyles__Placeholder-hc8ttv-0",
                    "{padding:0;}",
                    [Function],
                  ],
                  "staticRulesId": "",
                },
                "displayName": "Selectstyles__Current",
                "foldedComponentIds": Array [],
                "render": [Function],
                "shouldForwardProp": undefined,
                "styledComponentId": "Selectstyles__Current-sc-1w9qsms-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
          >
            <label
              className="Inputstyles__Wrapper-hc8ttv-6 eFbvRo Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
              disabled={true}
              size="l"
              target={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": e {
                    "baseHash": 259559705,
                    "baseStyle": undefined,
                    "componentId": "Selectstyles__Current-sc-1w9qsms-1",
                    "isStatic": false,
                    "rules": Array [
                      "white-space:nowrap;text-overflow:ellipsis;overflow:hidden;height:100%;display:flex;align-items:center;",
                      [Function],
                      " ",
                      ".Inputstyles__StyledInput-hc8ttv-2",
                      "{padding:0;width:100%;height:auto;border-radius:0;}",
                      ".Inputstyles__Placeholder-hc8ttv-0",
                      "{padding:0;}",
                      [Function],
                    ],
                    "staticRulesId": "",
                  },
                  "displayName": "Selectstyles__Current",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "shouldForwardProp": undefined,
                  "styledComponentId": "Selectstyles__Current-sc-1w9qsms-1",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
            >
              <Inputstyles__Wrapped
                disabled={true}
              >
                <div
                  className="Inputstyles__Wrapped-hc8ttv-5 eqanMK"
                  disabled={true}
                >
                  <Selectstyles__Current
                    key=".1"
                    size="l"
                  >
                    <div
                      className="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
                      size="l"
                    >
                      <Selectstyles__Placeholder
                        disabled={true}
                      >
                        <div
                          className="Selectstyles__Placeholder-sc-1w9qsms-3 joBWhL"
                          disabled={true}
                        />
                      </Selectstyles__Placeholder>
                    </div>
                  </Selectstyles__Current>
                </div>
              </Inputstyles__Wrapped>
              <Inputstyles__Postfix
                active={false}
                size="l"
              >
                <div
                  className="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
                  size="l"
                >
                  <Selectstyles__Part
                    active={false}
                    key=".2"
                    onMouseDown={[Function]}
                  >
                    <div
                      className="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
                      onMouseDown={[Function]}
                    >
                      <SelectOpenDown
                        color="currentColor"
                        size="m"
                      >
                        <svg
                          fill="currentColor"
                          height={20}
                          viewBox="0 0 24 24"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <defs />
                          <path
                            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
                          />
                        </svg>
                      </SelectOpenDown>
                    </div>
                  </Selectstyles__Part>
                </div>
              </Inputstyles__Postfix>
            </label>
          </Inputstyles__Wrapper>
        </InputWrapper>
      </Selectstyles__StyledInputWrapper>
    </div>
  </Selectstyles__Box>
</Select>
`;

exports[`Select /w invalid 1`] = `
<Select
  design="outline"
  invalid={true}
  maxListHeight={300}
  openWhenFocus={true}
  postfix={
    Object {
      "down": <SelectOpenDown
        color="currentColor"
        size="m"
      />,
      "up": <SelectHide
        color="currentColor"
        size="m"
      />,
    }
  }
  size="l"
  tabIndex={0}
>
  <Selectstyles__Box
    aria-autocomplete="list"
    aria-disabled={false}
    aria-invalid={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex={0}
  >
    <div
      aria-autocomplete="list"
      aria-disabled={false}
      aria-invalid={true}
      className="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={0}
    >
      <Selectstyles__StyledInputWrapper
        active={false}
        design="outline"
        invalid={true}
        size="l"
        target={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": e {
              "baseHash": 259559705,
              "baseStyle": undefined,
              "componentId": "Selectstyles__Current-sc-1w9qsms-1",
              "isStatic": false,
              "rules": Array [
                "white-space:nowrap;text-overflow:ellipsis;overflow:hidden;height:100%;display:flex;align-items:center;",
                [Function],
                " ",
                ".Inputstyles__StyledInput-hc8ttv-2",
                "{padding:0;width:100%;height:auto;border-radius:0;}",
                ".Inputstyles__Placeholder-hc8ttv-0",
                "{padding:0;}",
                [Function],
              ],
              "staticRulesId": "",
            },
            "displayName": "Selectstyles__Current",
            "foldedComponentIds": Array [],
            "render": [Function],
            "shouldForwardProp": undefined,
            "styledComponentId": "Selectstyles__Current-sc-1w9qsms-1",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
      >
        <InputWrapper
          active={false}
          className="Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
          design="outline"
          invalid={true}
          size="l"
          target={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": e {
                "baseHash": 259559705,
                "baseStyle": undefined,
                "componentId": "Selectstyles__Current-sc-1w9qsms-1",
                "isStatic": false,
                "rules": Array [
                  "white-space:nowrap;text-overflow:ellipsis;overflow:hidden;height:100%;display:flex;align-items:center;",
                  [Function],
                  " ",
                  ".Inputstyles__StyledInput-hc8ttv-2",
                  "{padding:0;width:100%;height:auto;border-radius:0;}",
                  ".Inputstyles__Placeholder-hc8ttv-0",
                  "{padding:0;}",
                  [Function],
                ],
                "staticRulesId": "",
              },
              "displayName": "Selectstyles__Current",
              "foldedComponentIds": Array [],
              "render": [Function],
              "shouldForwardProp": undefined,
              "styledComponentId": "Selectstyles__Current-sc-1w9qsms-1",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
        >
          <Inputstyles__Wrapper
            active={false}
            className="Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
            design="outline"
            invalid={true}
            size="l"
            target={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": e {
                  "baseHash": 259559705,
                  "baseStyle": undefined,
                  "componentId": "Selectstyles__Current-sc-1w9qsms-1",
                  "isStatic": false,
                  "rules": Array [
                    "white-space:nowrap;text-overflow:ellipsis;overflow:hidden;height:100%;display:flex;align-items:center;",
                    [Function],
                    " ",
                    ".Inputstyles__StyledInput-hc8ttv-2",
                    "{padding:0;width:100%;height:auto;border-radius:0;}",
                    ".Inputstyles__Placeholder-hc8ttv-0",
                    "{padding:0;}",
                    [Function],
                  ],
                  "staticRulesId": "",
                },
                "displayName": "Selectstyles__Current",
                "foldedComponentIds": Array [],
                "render": [Function],
                "shouldForwardProp": undefined,
                "styledComponentId": "Selectstyles__Current-sc-1w9qsms-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
          >
            <label
              className="Inputstyles__Wrapper-hc8ttv-6 iaA-dFS Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
              size="l"
              target={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": e {
                    "baseHash": 259559705,
                    "baseStyle": undefined,
                    "componentId": "Selectstyles__Current-sc-1w9qsms-1",
                    "isStatic": false,
                    "rules": Array [
                      "white-space:nowrap;text-overflow:ellipsis;overflow:hidden;height:100%;display:flex;align-items:center;",
                      [Function],
                      " ",
                      ".Inputstyles__StyledInput-hc8ttv-2",
                      "{padding:0;width:100%;height:auto;border-radius:0;}",
                      ".Inputstyles__Placeholder-hc8ttv-0",
                      "{padding:0;}",
                      [Function],
                    ],
                    "staticRulesId": "",
                  },
                  "displayName": "Selectstyles__Current",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "shouldForwardProp": undefined,
                  "styledComponentId": "Selectstyles__Current-sc-1w9qsms-1",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
            >
              <Inputstyles__Wrapped>
                <div
                  className="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
                >
                  <Selectstyles__Current
                    key=".1"
                    size="l"
                  >
                    <div
                      className="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
                      size="l"
                    >
                      <Selectstyles__Placeholder>
                        <div
                          className="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
                        />
                      </Selectstyles__Placeholder>
                    </div>
                  </Selectstyles__Current>
                </div>
              </Inputstyles__Wrapped>
              <Inputstyles__Postfix
                active={false}
                size="l"
              >
                <div
                  className="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
                  size="l"
                >
                  <Selectstyles__Part
                    active={false}
                    key=".2"
                    onMouseDown={[Function]}
                  >
                    <div
                      className="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
                      onMouseDown={[Function]}
                    >
                      <SelectOpenDown
                        color="currentColor"
                        size="m"
                      >
                        <svg
                          fill="currentColor"
                          height={20}
                          viewBox="0 0 24 24"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <defs />
                          <path
                            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
                          />
                        </svg>
                      </SelectOpenDown>
                    </div>
                  </Selectstyles__Part>
                </div>
              </Inputstyles__Postfix>
            </label>
          </Inputstyles__Wrapper>
        </InputWrapper>
      </Selectstyles__StyledInputWrapper>
    </div>
  </Selectstyles__Box>
</Select>
`;

exports[`Select /w options as children 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w options as children 2`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w options as children 3`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w options as props 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w options as props 2`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w options as props 3`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w postfix up 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w postfix up and down 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 gPunPw Selectstyles__StyledInputWrapper-sc-1w9qsms-4 hKhcQE"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 kIrFkP"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 lldsPY"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 2`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 gPunPw Selectstyles__StyledInputWrapper-sc-1w9qsms-4 hKhcQE"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Prefix-hc8ttv-3 kYAOvH"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 kIrFkP"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 lldsPY"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 3`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 eablnU Selectstyles__StyledInputWrapper-sc-1w9qsms-4 iEIbIk"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 4`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 eablnU Selectstyles__StyledInputWrapper-sc-1w9qsms-4 iEIbIk"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Prefix-hc8ttv-3 euGNYx"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 5`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 hmYQOg Selectstyles__StyledInputWrapper-sc-1w9qsms-4 iEIbIk"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 6`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 hmYQOg Selectstyles__StyledInputWrapper-sc-1w9qsms-4 iEIbIk"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Prefix-hc8ttv-3 euGNYx"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 7`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 8`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Prefix-hc8ttv-3 euGNYx"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 9`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 dcSDdd Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fmxLOu"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 cxucT"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 10`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 dcSDdd Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Prefix-hc8ttv-3 kmuzTc"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fmxLOu"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 cxucT"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 11`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 femZgC Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fmxLOu"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 cxucT"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select /w size 12`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM"
  role="combobox"
  tabindex="0"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 femZgC Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Prefix-hc8ttv-3 kmuzTc"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fmxLOu"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 cxucT"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Select w/ any props 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Selectstyles__Box-sc-1w9qsms-2 dXbEZM className"
  id="id"
  role="combobox"
  tabindex="0"
  title="title"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl Selectstyles__StyledInputWrapper-sc-1w9qsms-4 bktCyL"
    target=".Selectstyles__Current-sc-1w9qsms-1"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Selectstyles__Current-sc-1w9qsms-1 fjOpxM"
      >
        <div
          class="Selectstyles__Placeholder-sc-1w9qsms-3 fDwRzi"
        />
      </div>
    </div>
    <div
      class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
    >
      <div
        class="Selectstyles__Part-sc-1w9qsms-0 iKTEGT"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
